@@ -1,3 +1,7 @@
+2005-03-29  Alexander Malysh <amalysh at kannel.org>
+    * gwlib/http.c: fixed horrible bug in 'http_cgivar_dump' that
+      used 'gwlist_extract_first' instead of 'gwlist_get'.
+
 2005-03-28  Alexander Malysh <amalysh at kannel.org>
     * gwlib/dbpool.h: fixed compiler warnings.
 
